# memofante

./: Cargo.toml  LICENSE.txt  README.md  README.pt.md  flake.nix  shell.nix
src/: commands.rs  database.rs  dictutils.rs  discovered_word.rs  main.rs
src/commands/: add.rs  list.rs  remove.rs  review.rs
src/commands/review/: spaced_repetition.rs
src/database/: migrations.rs
